[gd_scene load_steps=8 format=3 uid="uid://bohpqq5yt328j"]

[ext_resource type="Texture2D" uid="uid://bq7a68awdyke6" path="res://projeto-jogo-ray/assets/Legacy_Adventure_Pack/Assets/jungle tileset/parallax background/plx-1.png" id="1_aj7ew"]
[ext_resource type="Script" path="res://scripts/tela_inicial.gd" id="1_nf88s"]
[ext_resource type="Texture2D" uid="uid://dgm33j5coff1d" path="res://projeto-jogo-ray/assets/Legacy_Adventure_Pack/Assets/jungle tileset/parallax background/plx-2.png" id="2_h0yfg"]
[ext_resource type="Texture2D" uid="uid://cmnogwwy48l4v" path="res://projeto-jogo-ray/assets/Legacy_Adventure_Pack/Assets/jungle tileset/parallax background/plx-3.png" id="3_1bpdq"]
[ext_resource type="Texture2D" uid="uid://tfvhstf3bkao" path="res://projeto-jogo-ray/assets/Legacy_Adventure_Pack/Assets/jungle tileset/parallax background/plx-4.png" id="4_w2ygo"]
[ext_resource type="Texture2D" uid="uid://b71l6sn681hn1" path="res://projeto-jogo-ray/assets/Legacy_Adventure_Pack/Assets/jungle tileset/parallax background/plx-5.png" id="5_byq2j"]
[ext_resource type="Theme" uid="uid://cf5620wyr00y4" path="res://assets/joystix.tres" id="7_2pkfi"]

[node name="Node2D" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]
script = ExtResource("1_nf88s")

[node name="TextureRect" type="TextureRect" parent="Camera2D/CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_aj7ew")

[node name="TextureRect2" type="TextureRect" parent="Camera2D/CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_h0yfg")

[node name="TextureRect3" type="TextureRect" parent="Camera2D/CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_1bpdq")

[node name="TextureRect4" type="TextureRect" parent="Camera2D/CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_w2ygo")

[node name="TextureRect5" type="TextureRect" parent="Camera2D/CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_byq2j")

[node name="PanelContainer" type="PanelContainer" parent="Camera2D/CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7_2pkfi")
theme_type_variation = &"EmptyFrameBig"

[node name="VBoxContainer" type="VBoxContainer" parent="Camera2D/CanvasLayer/PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Camera2D/CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 8

[node name="HBoxContainer" type="HBoxContainer" parent="Camera2D/CanvasLayer/PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Camera2D/CanvasLayer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Jogo Educativo - Chico Mendes"

[node name="Control" type="Control" parent="Camera2D/CanvasLayer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="Camera2D/CanvasLayer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Sair"

[node name="MarginContainer2" type="MarginContainer" parent="Camera2D/CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 128

[node name="Label" type="Label" parent="Camera2D/CanvasLayer/PanelContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"HeaderLarge"
text = "Bem vindo ao jogo! Selecione uma fase:"

[node name="MarginContainer3" type="MarginContainer" parent="Camera2D/CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_top = 96

[node name="GridContainer" type="GridContainer" parent="Camera2D/CanvasLayer/PanelContainer/VBoxContainer/MarginContainer3"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 2

[node name="Button" type="Button" parent="Camera2D/CanvasLayer/PanelContainer/VBoxContainer/MarginContainer3/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Fase 1"

[node name="Button2" type="Button" parent="Camera2D/CanvasLayer/PanelContainer/VBoxContainer/MarginContainer3/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Fase 2"

[node name="Button3" type="Button" parent="Camera2D/CanvasLayer/PanelContainer/VBoxContainer/MarginContainer3/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Fase 3"

[node name="Button4" type="Button" parent="Camera2D/CanvasLayer/PanelContainer/VBoxContainer/MarginContainer3/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Fase 4"

[node name="Button5" type="Button" parent="Camera2D/CanvasLayer/PanelContainer/VBoxContainer/MarginContainer3/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Fase 5"

[connection signal="pressed" from="Camera2D/CanvasLayer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/Button" to="Camera2D/CanvasLayer" method="_on_quit_pressed"]
[connection signal="pressed" from="Camera2D/CanvasLayer/PanelContainer/VBoxContainer/MarginContainer3/GridContainer/Button" to="Camera2D/CanvasLayer" method="_on_button1_pressed"]
[connection signal="pressed" from="Camera2D/CanvasLayer/PanelContainer/VBoxContainer/MarginContainer3/GridContainer/Button2" to="Camera2D/CanvasLayer" method="_on_button_2_pressed"]
[connection signal="pressed" from="Camera2D/CanvasLayer/PanelContainer/VBoxContainer/MarginContainer3/GridContainer/Button3" to="Camera2D/CanvasLayer" method="_on_button_3_pressed"]
[connection signal="pressed" from="Camera2D/CanvasLayer/PanelContainer/VBoxContainer/MarginContainer3/GridContainer/Button5" to="Camera2D/CanvasLayer" method="_on_button5_pressed"]
